Started moving application of the wiki formatting functions into the templates.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4101 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -82,7 +82,9 @@
               </th>
             </tr>
             <tr>
-              <td class="message searchable">$attachment.description</td>
+              <td class="message searchable">
+                ${wiki_to_html(attachment.description)
+              </td>
             </tr>
           </tbody>
         </table>
