--- a/htdocs/css/admin.css
+++ b/htdocs/css/admin.css
@@ -2,7 +2,7 @@
 
 #tabs { background: #f7f7f0; border: 1px solid black;
   border-color: #ccc #666 #666 #ccc; clear: left;
-  margin: 1em 0 0; padding: .5em 0 0; float: left; width: 12em;
+  margin: 1em 0 2em; padding: .5em 0 0; float: left; width: 12em;
 }
 #tabs ul { list-style: none; margin: 0 0 .5em; padding: 0 }
 #tabs li { color: #999; font-size: 90%; font-weight: bold; margin: 0;
