--- a/templates/admin_perms.html
+++ b/templates/admin_perms.html
@@ -21,7 +21,7 @@
         <div class="field">
           <label>Action:
             <select id="action" name="action">
-              <option py:for="action in actions">$action</option>
+              <option py:for="action in sorted(actions)">$action</option>
             </select>
           </label>
         </div>
