Fix typo in attachment listing template.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4116 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -169,7 +169,7 @@
             <py:for each="attachment in attachments">
               <dt>${show_one_attachment(attachment)}</dt>
               <dd py:if="attachment.description">
-                $wiki_to_html(attachment.description)
+                ${wiki_to_oneliner(attachment.description)}
               </dd>
             </py:for>
           </dl>
