Fixed typo in the Genshi template for the milestone view. Fixes #4060.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4136 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/milestone_view.html
+++ b/templates/milestone_view.html
@@ -22,7 +22,7 @@
             Completed ${pretty_timedelta(milestone.completed)} ago
             (${format_date(milestone.completed)})
           </p>
-          <p py:when="milestone.late" class="date">
+          <p py:when="milestone.is_late" class="date">
             <strong>${pretty_timedelta(milestone.due)} late</strong>
             (${format_date(milestone.due)})
           </p>
