Hide edit/attach buttons on readonly wiki pages for non-admin users.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4141 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/wiki_edit.html
+++ b/templates/wiki_edit.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
       $(document).ready(function() {
         $("#text").blur(function() {
-          $("#scroll_bar_pos").val(this.scrollTop)
+          $("#scroll_bar_pos").val(this.scrollTop);
         }).get(0).scrollTop = $("#scroll_bar_pos").val();
         $("#editrows").change(function() {
           resizeTextArea("text", this.options[this.selectedIndex].value);
