Improved API for checking permissions:  * instead of `perm.has_permission('FOO')` use `'FOO' in perm`  * instead of `perm.assert_permission('FOO')` use `perm.require('FOO')` The old API still works but should be considered deprecated.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4143 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,10 +14,10 @@
     <div id="ctxtnav" class="nav">
       <h2>About Navigation</h2>
       <ul>
-        <li class="first${not perm.has_permission('CONFIG_VIEW') and ' last' or ''}">
+        <li class="first${'CONFIG_VIEW' not in perm and ' last' or ''}">
           <a href="${href.about()}">Overview</a>
         </li>
-        <li class="last" py:if="perm.has_permission('CONFIG_VIEW')">
+        <li class="last" py:if="'CONFIG_VIEW' in perm">
           <a href="${href.about('config')}">Configuration</a>
         </li>
       </ul>
