--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -79,7 +79,7 @@
         </li>
       </ul>
 
-      <div py:if="perm.has_permission('MILESTONE_CREATE')" class="buttons">
+      <div py:if="'MILESTONE_CREATE' in perm" class="buttons">
        <form method="get" action="${href.milestone}"><div>
         <input type="hidden" name="action" value="new" />
         <input type="submit" value="Add new milestone" />
