Add an ITicketGroupStatsProvider interface for providing alternate ways to compute the Milestone statistics. Based on a patch by Justin Francis. Closes #2314.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4150 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -184,4 +184,37 @@
     </py:choose>
   </py:def>
 
+  <!--!  Display a generic "progress bar", for use in roadmap and milestone.
+  -
+  -      Expected properties of the `stats` argument:
+  -       .intervals    list of intervals, each with:
+  -         .title        the common identifier for this group
+  -         .caps_title   same as above but capitalized
+  -         .css_class    the CSS class used to customize the look of the interval
+  -         .percent      the actual width in % of the interval
+  -         .count        the actual number of units taken by this interval
+  -      .unit         the name of the unit used
+  -      .done_percent the percent considered "done"
+  -      .count        the total number of units
+  -->
+  <py:def function="progress_bar(stats, percent=None, legend=True, style=None)">
+    <table class="progress" style="$style">
+      <tr>
+        <td py:for="interval in stats.intervals"
+            class="$interval.css_class" style="width: ${interval.percent}%">
+          <a href="$interval.href"
+            title="${interval.count} of ${stats.count} ${stats.unit}${
+            stats.count != 1 and 's' or ''} ${interval.title}"></a>
+        </td>
+      </tr>
+    </table>
+    <p class="percent">${percent is None and '%d%%' % stats.done_percent or percent}</p>
+    <dl py:if="legend">
+      <py:for each="interval in stats.intervals">
+        <dt>${interval.caps_title} ${stats.unit}s:</dt>
+        <dd><a href="$interval.href">${interval.count}</a></dd>
+      </py:for>
+    </dl>
+  </py:def>
+
 </div>
