--- a/templates/milestone_view.html
+++ b/templates/milestone_view.html
@@ -5,6 +5,7 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="layout.html" />
+  <xi:include href="macros.html" />
   <head>
     <title>Milestone ${milestone.name}</title>
     <link rel="stylesheet" type="text/css"
@@ -34,31 +35,13 @@
             No date set
           </p>
         </py:choose>
-        <py:if test="stats.total_tickets">
-          <table class="progress">
-            <td class="closed" style="width: ${stats.percent_closed}%">
-              <a href="$queries.closed_tickets"
-                 title="${stats.closed_tickets} of ${stats.total_tickets} ticket${stats.total_tickets != 1 and 's' or ''} closed"></a>
-            </td>
-            <td class="open" style="width: ${stats.percent_active}%">
-              <a href="$queries.active_tickets"
-                 title="${stats.active_tickets} of ${stats.total_tickets} ticket${stats.total_tickets != 1 and 's' or ''} active"></a>
-            </td>
-          </table>
-          <p class="percent">${int(stats.percent_closed)}%</p>
-          <dl>
-            <dt>Closed tickets:</dt>
-            <dd><a href="$queries.closed_tickets">${stats.closed_tickets}</a></dd>
-            <dt>Active tickets:</dt>
-            <dd><a href="$queries.active_tickets">${stats.active_tickets}</a></dd>
-          </dl>
-        </py:if>
+        <py:if test="stats.count">${progress_bar(stats)}</py:if>
       </div>
 
       <form py:if="stats.available_groups" id="stats" action="">
         <fieldset>
           <legend>
-            <label for="by">Ticket status by</label>
+            <label for="by">${stats.caps_title} by</label>
             <select id="by" name="by" onchange="this.form.submit()">
               <option py:for="group in stats.available_groups"
                       value="${group.name}" py:content="group.label"
@@ -69,20 +52,11 @@
           <table summary="Shows the milestone completion status grouped by ${stats.grouped_by}">
             <tr py:for="group in stats.groups">
               <th scope="row">
-                <a href="${group.queries.all_tickets}">${group.name}</a>
+                <a href="${group.stats.href}">${group.name}</a>
               </th>
               <td style="white-space: nowrap">
-                <table class="progress" style="width: ${group.percent_total * 80 / stats.max_percent_total}%">
-                  <td class="closed" style="width: ${group.stats.percent_closed}%">
-                    <a href="$group.queries.closed_tickets"
-                       title="${group.stats.closed_tickets} of ${group.stats.total_tickets} ticket${group.stats.total_tickets != 1 and 's' or ''} closed"></a>
-                  </td>
-                  <td class="open" style="width: ${group.stats.percent_active}%">
-                    <a href="$group.queries.active_tickets"
-                       title="${group.stats.active_tickets} of ${group.stats.total_tickets} ticket${group.stats.total_tickets != 1 and 's' or ''} active"></a>
-                  </td>
-                </table>
-                <p class="percent">${group.stats.closed_tickets} / ${group.stats.total_tickets}</p>
+                ${progress_bar(group.stats,'%d / %d' % (group.stats.done_count, group.stats.count),
+                               legend=False, style="width: %d%%" % (group.percent_of_max_total * 0.8))}
               </td>
             </tr>
           </table>
