Fixed a few typos related to attachments. Closes #4096.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4173 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -77,13 +77,13 @@
           <tbody>
             <tr>
               <th scope="col">
-                File $attachment.filename, ${sizeinfo(attachment.size)} 
+                File $attachment.filename, ${sizeinfo(attachment.size)}
                 (added by $attachment.author,  ${dateinfo(attachment.date)} ago)
               </th>
             </tr>
             <tr>
               <td class="message searchable">
-                ${wiki_to_html(attachment.description)
+                ${wiki_to_html(attachment.description)}
               </td>
             </tr>
           </tbody>
