--- a/templates/wiki_diff.html
+++ b/templates/wiki_diff.html
@@ -8,7 +8,7 @@
   <xi:include href="macros.html" />
   <head>
     <title>$title</title>
-    <link rel="stylesheet" type="text/css" href="$htdocs_location/css/diff.css" />
+    <link rel="stylesheet" type="text/css" href="${chrome.htdocs_location}css/diff.css" />
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
   </head>
 
