Add anchors for titles in Milestone description. Implements #2587.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4191 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/milestone_view.html
+++ b/templates/milestone_view.html
@@ -8,6 +8,11 @@
   <xi:include href="macros.html" />
   <head>
     <title>Milestone ${milestone.name}</title>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#content").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
+      });
+    </script>
     <link rel="stylesheet" type="text/css"
           href="${chrome.htdocs_location}css/roadmap.css" />
   </head>
