Support "/" in Milestone names. There's no need for replacing '/' by '%2F', I checked that with Apache as well. Fixes #1816.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4196 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -34,7 +34,7 @@
         <li py:for="idx, milestone in enumerate(milestones)" class="milestone">
 
           <div class="info">
-            <h2><a href="${href.milestone(milestone.name.replace('/', '%2F'))}">
+            <h2><a href="${href.milestone(milestone.name)}">
               Milestone: <em>${milestone.name}</em>
             </a></h2>
             <py:choose>
