--- a/templates/milestone_view.html
+++ b/templates/milestone_view.html
@@ -40,27 +40,28 @@
             No date set
           </p>
         </py:choose>
-        <py:if test="stats.count">${progress_bar(stats)}</py:if>
+        <py:if test="stats.count">${progress_bar(stats, interval_hrefs)}</py:if>
       </div>
 
-      <form py:if="stats.available_groups" id="stats" action="">
+      <form py:if="available_groups" id="stats" action="">
         <fieldset>
           <legend>
-            <label for="by">${stats.caps_title} by</label>
+            <label for="by">${stats.title.capitalize()} by</label>
             <select id="by" name="by" onchange="this.form.submit()">
-              <option py:for="group in stats.available_groups"
+              <option py:for="group in available_groups"
                       value="${group.name}" py:content="group.label"
-                      selected="${stats.grouped_by == group.name or None}" />
+                      selected="${grouped_by == group.name or None}" />
             </select>
             <noscript><input type="submit" value="Update" /></noscript>
           </legend>
-          <table summary="Shows the milestone completion status grouped by ${stats.grouped_by}">
-            <tr py:for="group in stats.groups">
+          <table summary="Shows the milestone completion status grouped by ${grouped_by}">
+            <tr py:for="group in groups">
               <th scope="row">
-                <a href="${group.stats.href}">${group.name}</a>
+                <a href="${group.stats_href}">${group.name}</a>
               </th>
               <td style="white-space: nowrap">
-                ${progress_bar(group.stats,'%d / %d' % (group.stats.done_count, group.stats.count),
+                ${progress_bar(group.stats, group.interval_hrefs,
+                               '%d / %d' % (group.stats.done_count, group.stats.count),
                                legend=False, style="width: %d%%" % (group.percent_of_max_total * 0.8))}
               </td>
             </tr>
