Clarify the !TimelineEvent API, `markup` vs. wiki text `message`
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4214 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -41,8 +41,8 @@
                 <py:if test="event.author">by ${event.author}</py:if>
             </a></dt>
             <dd class="${event.kind}">
-              ${event.message}
-              <py:if test="event.wiki">${wiki_to_oneliner(event.wiki)}</py:if>
+              ${event.markup}
+              <py:if test="event.message">${wiki_to_oneliner(event.message)}</py:if>
             </dd>
           </py:for>
         </dl>
