Adapt the Wiki ITimelineEventProvider to the new interface; also remove remaining wiki_to_* calls from that module.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4218 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/templates/wiki_history.html
+++ b/templates/wiki_history.html
@@ -48,7 +48,7 @@
               </td>
               <td class="date">${format_datetime(item.date)}</td>
               <td class="author" title="IP-Address: $item.ipnr">$item.author</td>
-              <td class="comment">$item.comment</td>
+              <td class="comment">${wiki_to_oneliner(item.comment)}</td>
             </tr>
           </tbody>
         </table>
