--- a/templates/wiki_edit.html
+++ b/templates/wiki_edit.html
@@ -43,12 +43,12 @@
           <table id="info" summary="Revision info">
             <tbody>
               <tr><th scope="col">Preview of future version ${page.version+1} (modified by $author)</th></tr>
-              <tr><td class="message">$comment_html</td></tr>
+              <tr><td class="message">${wiki_to_html(comment)}</td></tr>
             </tbody>
           </table>
           <fieldset id="preview">
             <legend>Preview (<a href="#edit">skip</a>)</legend>
-            <div class="wikipage">$page_html</div>
+            <div class="wikipage">${wiki_to_html(page.text)}</div>
           </fieldset>
         </py:when>
         <py:when test="'collision'">
